# LArCV

./: .gitignore  .gitmodules  CMakeLists.txt  GNUmakefile  README.md  configure.sh
Makefile/: GNUmakefile.CORE  Makefile.AIX  Makefile.Darwin  Makefile.Linux
Merger/: BNBNuStream.cxx  BNBNuStream.h  EXTStream.cxx  EXTStream.h  GNUmakefile  ImageHolder.cxx  ImageHolder.h  LinkDef.h  MergeTwoStream.cxx  MergeTwoStream.h
ROI/data_samples/: README.md
Supera/APILArLite/: FMWKInterface.cxx  supera.fcl
Supera/larfmwk_shared/: Cropper.cxx  MCParticleTree.cxx  SuperaUtils.cxx  supera.fcl
app/: .gitignore  GNUmakefile
app/ANN/: ANNAlgo.cxx  ANNAlgo.h  LinkDef.h
app/APICaffe/: CircularBufferBase.cxx  CircularBufferBase.h  CircularBufferBase.imp.h  DatumFillerBase.cxx  DatumFillerBase.h  GNUmakefile  ImageFiller.cxx  ImageFiller.h  ImageFillerBase.cxx  ImageFillerBase.h  LinkDef.h  MultiClassFiller.cxx  MultiClassFiller.h  SegDatumFillerBase.cxx  SegDatumFillerBase.h  SegFiller.cxx  SegFiller.h  SimpleFiller.cxx  SimpleFiller.h  ThreadDatumFiller.cxx  ThreadDatumFiller.h  ThreadFillerFactory.cxx  ThreadFillerFactory.h  aho.cfg  filler.cfg
app/Binarize/: Binarize.h  GNUmakefile  LinkDef.h
app/Supera/APILArSoft/: CMakeLists.txt  FMWKInterface.cxx  Supera_module.cc
app/Supera/APILArSoft/job/: bnb_nu_supera_larlite.fcl  deftest.py
argoneut_cfg/: argoneut_compression.cfg  binarize_data.cfg  binarize_mc.cfg  bkgroi.cfg  dataroi.cfg  empty_event_filter.cfg  fakeroi.cfg  nueroi.cfg
cmake/: Config.cmake.in  FindNumpy.cmake
core/: GNUmakefile  configure.sh
doc/: FeaturesInNewVersion.md  doxygenLArCV.script
example/: merger.cfg  process.cfg
html/: _a_d_c_scale_8cxx.html  _a_d_c_scale_8cxx_source.html  _a_d_c_scale_8h.html  _a_d_c_scale_8h_source.html  _a_d_c_scale_ana_8cxx.html  _a_d_c_scale_ana_8cxx_source.html  _a_d_c_scale_ana_8h.html  _a_d_c_scale_ana_8h_source.html  _a_d_c_threshold_8cxx.html  _a_d_c_threshold_8cxx_source.html  _a_d_c_threshold_8h.html  _a_d_c_threshold_8h_source.html  _a_n_n_8cpp.html  _a_n_n_8cpp_source.html  _a_n_n_8h.html  _a_n_n_8h_source.html  _a_n_n_algo_8cxx.html  _a_n_n_algo_8cxx_source.html  _a_n_n_algo_8h.html  _a_n_n_algo_8h_source.html  _a_n_nperf_8h.html  _a_n_nperf_8h_source.html  _a_n_nx_8h.html  _a_n_nx_8h_source.html  _a_p_i_caffe_types_8h.html  _a_p_i_caffe_types_8h_source.html  _a_p_i_l_ar_lite_2_f_m_w_k_imp_8cxx.html  _a_p_i_l_ar_lite_2_f_m_w_k_imp_8cxx_source.html  _a_p_i_l_ar_lite_2_f_m_w_k_imp_8h.html  _a_p_i_l_ar_lite_2_f_m_w_k_imp_8h_source.html  _a_p_i_l_ar_soft_2_f_m_w_k_imp_8cxx.html  _a_p_i_l_ar_soft_2_f_m_w_k_imp_8cxx_source.html  _a_p_i_l_ar_soft_2_f_m_w_k_imp_8h.html  _a_p_i_l_ar_soft_2_f_m_w_k_imp_8h_source.html  _a_star3_d_algo_8cxx.html  _a_star3_d_algo_8cxx_source.html  _a_star3_d_algo_8h.html  _a_star3_d_algo_8h_source.html  _a_star3_d_algo_config_8cxx.html  _a_star3_d_algo_config_8cxx_source.html  (+2084 more)
larcv/: CMakeLists.txt
larcv/app/ImageMod/: ADCScale.cxx  ADCScaleAna.cxx  ADCThreshold.cxx  ADCThreshold.h  Binarize.cxx  CMakeLists.txt  ChannelMax.cxx  ChannelMax.h  CombineImages.cxx  Compressor.cxx  Compressor.h  CosmicROIFiller.cxx  CosmicROIFiller.h  CropROI.cxx  CropROI.h  EmbedImage.cxx  EmbedImage.h  GNUmakefile  ImageChargeAna.cxx  ImageChargeAna.h  ImageFromPixel2D.cxx  ImageFromPixel2D.h  ImageFromPixel2DCluster.cxx  ImageFromPixel2DCluster.h  ImageModUtils.h  LinkDef.h  MaskImage.cxx  MaskImage.h  MeanSubtraction.cxx  MeanSubtraction.h  ModularPadImage.cxx  ModularPadImage.h  MultiROICropper.cxx  MultiROICropper.h  PlaneImageMerger.cxx  PlaneImageMerger.h  README.md  ROIClipper.cxx  ROIClipper.h  ROIMask.cxx  (+28 more)
larcv/app/Reco3D/: AStarTracker.cxx  AStarTracker.h  AStarUtils.h  CMakeLists.txt  Run3DTracker.cxx  Run3DTracker.h  TrackerEventDisplay.cxx  TrackerEventDisplay.h
larcv/app/Reco3D/cfg/: tracker_display.cfg
larcv/app/Reco3D/mac/: run_display.py  run_reco3d.py
larcv/core/: CMakeLists.txt
larcv/core/Base/: CMakeLists.txt  ConfigManager.h  LArCVTypes.h  Parser.cxx  Parser.h  larbys.h  larcv_base.h  larcv_logger.cxx  larcv_logger.h
larcv/core/CPPUtil/: CMakeLists.txt
larcv/core/CVUtil/: CMakeLists.txt  CVUtil.cxx  CVUtil.h
larcv/core/DataFormat/: #EventImage2D.h#  BBox.h  CMakeLists.txt  ClusterMask.cxx  ClusterMask.h  ClusterVoxel3D.cxx  ClusterVoxel3D.h  DataFormatTypes.h  DataFormatUtil.cxx  DataProductFactory.h  EventClusterMask.cxx  EventClusterMask.h  EventClusterVoxel3D.cxx  EventClusterVoxel3D.h  EventImage2D.cxx  EventImage2D.h  EventPGraph.cxx  EventPGraph.h  EventParticle.h  EventPixel2D.cxx  EventPixel2D.h  EventROI.h  EventSparseImage.cxx  EventSparseTensor2D.cxx  EventSparseTensor2D.h  EventSparseTensor3D.cxx  EventSparseTensor3D.h  EventVoxel2D.cxx  EventVoxel2D.h  EventVoxel3D.cxx  EventVoxel3D.h  IOManager.cxx  IOManager.h  Image2D.cxx  Image2D.h  ImageMeta.cxx  ImageMeta.h  LinkDef.h  PGraph.cxx  Pixel2DCluster.cxx  (+19 more)
larcv/core/DataFormat/arxiv/: EventParticleROI.cxx  EventParticleROI.h  IOManager.inl  ParticleROI.h  Vertex.cxx
larcv/core/DataFormat/old/: DataFormatTypes.h  IOManager.inl
larcv/core/Processor/: CMakeLists.txt  LinkDef.h  ProcessBase.h  ProcessDriver.cxx  ProcessDriver.h  ProcessFactory.h  RunFilter.cxx
larcv/core/PyUtil/: CMakeLists.txt  LinkDef.h  NumpyArray.cxx  NumpyArray.h  PyImageMaker.cxx  PyImageStitcher.cxx  PyUtils.cxx  PyUtils.h  PyUtils_sparsetensor.cxx  PyUtils_sparsetensor.h  load_pyutil.h  setpyutils.cxx  setpyutils.h
larcv/core/ROOTUtil/: CMakeLists.txt  LinkDef.h  ROOTUtils.cxx  ROOTUtils.h  load_rootutil.h
larcv/core/TorchUtil/: CMakeLists.txt  GNUmakefile  LinkDef.h  TorchUtils.cxx  TorchUtils.h
larcv/core/json/: CMakeLists.txt  LinkDef.h  README.md  json_utils.cxx  json_utils.h
mac/: README.md  config.yml  dump_all_bb.py  dump_bb.py  dump_img.py  dump_pixels.py  taritree.yml  ubresnet_12ch_768.yml  view_rgb.py  view_white.py
misc/: FindCUDA.cmake  patch.sh
unittest/: clustermask_tests.py  image2d_tests.py  metamethods.py  pyutil_pixelarray_test.py
ups/: larcv.table
voxDis/: __init__.py  display.py
(+1419 files in other folders)
