add_subdirectory(Base)
add_subdirectory(DataFormat)
add_subdirectory(json)
add_subdirectory(CPPUtil)
add_subdirectory(Processor)
add_subdirectory(ROOTUtil)
if (USE_OPENCV)
  add_subdirectory(CVUtil)
endif()
if (LARCV_USE_PYTHON)
  add_subdirectory(PyUtil)
endif()
if (LARCV_USE_TORCH)
  add_subdirectory(TorchUtil)
endif()
